# UEFN-Project-Parser

./: .dashboard.json  .gitignore  .mcp.json  CLAUDE.md  FortniteForge.sln  SETUP.md  bash.exe.stackdump  forge.config.example.json  forge.config.sandbox.json  install-bridge.bat  plan.md  wellversed.bat
.claude/: settings.local.json  snapshot.md
app/: bash.exe.stackdump  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: commands.rs  file_watcher.rs  lib.rs  lsp_bridge.rs  main.rs  sidecar.rs
archive/FortniteForge.Web/: DeviceClassifier.cs  FortniteForge.Web.csproj  Program.cs  ProjectManager.cs  SpatialExtractor.cs
bridge/: init_unreal.py
bridge/wellversed/: __init__.py  listener.py  safety.py  serialization.py
docs/: ARCHITECTURE.md  EXAMPLES.md  VERSE_LSP_PLAN.md
docs/dashboard/: analysis.html  backlog.html  changelog.html  documentation.html  userguide.html
src/FortniteForge.CLI/: FortniteForge.CLI.csproj  Program.cs
src/FortniteForge.Core/: FortniteForge.Core.csproj
src/FortniteForge.MCP/: FortniteForge.MCP.csproj  Program.cs
src/FortniteForge.Web/: DeviceClassifier.cs  Program.cs
tests/FortniteForge.Tests/: AnalyticsOutputTest.cs  AssetGuardTests.cs  AssetValidatorTests.cs  BackupServiceTests.cs  BiomeConfigTests.cs  BuildServiceTests.cs  DeviceEncyclopediaTests.cs  DigestServiceTests.cs  ForestPlacementTest.cs  ForgeConfigTests.cs  FortniteForge.Tests.csproj  SandboxTests.cs  (+18 more)
tools/: cdp_screenshot.py
(+1731 files in other folders)
