[package]
name = "wellversed"
version = "1.0.0"
description = "WellVersed — UEFN Project Management Studio"
authors = ["WellVersed"]
edition = "2021"

[lib]
name = "wellversed_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "wellversed"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
